<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ecriture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back_we_missed_you">Welcome back we missed you!</string>
    <string name="username_or_email_address">username or email address</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full name</string>
    <string name="email_adress">Email address</string>
    <string name="or">OR</string>
    <string name="Select">Select genres you want to see\n more of</string>
    <string name="fiction">Fiction</string>
    <string name="proced">Proceed</string>
    <string name="let_s_set_a_pen_name_for_you">Let\'s set a pen name for you</string>
    <string name="select_a_pen_name">select a pen name</string>
    <string name="warning">Warning</string>
    <string name="oops">Oops</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="suraj_singh">Suraj Singh</string>
    <string name="_3h_ago">3h ago</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non nulla varius odio nisl vitae diam aenean. Velit odio sed semper facilisis quam. Nisl, amet, tellus sem purus. Interdum mauris, ultricies ridiculus aliquet mauris vitae amet</string>
    <string name="explore">Explore</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisi, ultricies in aliquet nibh Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non nulla varius odio nisl vitae diam aenean. Velit odio sed semper faci</string>
    <string name="get_started">Get Started</string>
    <string name="OR">OR</string>
    <string name="title">Tittle</string>
    <string name="already">Already have an account</string>
</resources>