<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.authentication.SignInFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_ecruiture_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/welcome_back_we_missed_you"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutFullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        app:boxStrokeWidth="0dp"
        app:endIconMode="custom"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_user"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_curve"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmailAdress"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="6dp"
        android:padding="4dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconMode="custom"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_curve"
            android:hint="@string/email_adress"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="6dp"
        android:padding="4dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_password_key"
        app:endIconMode="custom"
        app:endIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_curve"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="18dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvSignUp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/gradient_btn"
        android:fontFamily="@font/mostserrate_bold"
        android:padding="14dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#88D4BCBC" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mostserrate_bold"
            android:text="@string/or"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#88D4BCBC" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/mostserrate_bold"
        android:text="@string/sign_in_using"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_button_curve"
            android:src="@drawable/ic_google_icon"
            app:contentPadding="5dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_button_curve"
            android:src="@drawable/ic_facebook_icons"
            app:contentPadding="3dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/already"
            android:textColor="#848080"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_in"
            android:layout_marginStart="3dp"
            android:textColor="#0B4697"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>