<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.authentication.SignInFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_ecruiture_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/welcome_back_we_missed_you"
        android:textSize="18sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="username"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:padding="8dp"
            app:endIconDrawable="@drawable/ic_email"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_curve"
                android:inputType="textPersonName"
                android:padding="20dp"
                android:textColor="@color/search_color"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:padding="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_password_key"
            app:endIconMode="custom"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_curve"
                android:inputType="textVisiblePassword"
                android:padding="20dp"
                android:textColor="@color/blue_teal"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@drawable/gradient_btn"
        android:fontFamily="@font/mostserrate_bold"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#88D4BCBC" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mostserrate_bold"
            android:padding="12dp"
            android:text="@string/OR"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="170dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#88D4BCBC" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/mostserrate_bold"
        android:text="@string/sign_in_using"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:cardCornerRadius="12dp"
            android:layout_gravity="center_vertical"
            app:strokeColor="@color/blue_teal"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivGoogleLink"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_google_icon" />

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            app:cardCornerRadius="12dp"
            app:strokeColor="@color/blue_teal"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFacebookLink"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_facebook_icons" />

        </com.google.android.material.card.MaterialCardView>


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/don_t_have_an_account"
            android:textColor="#848080"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_up"
            android:textColor="#0B4697"
            android:textSize="16sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>