<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="1dp"
    app:strokeWidth="0dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/item_background"
    android:layout_marginTop="12dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/blue_teal"
                app:strokeWidth="2dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_demo_one" />

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/suraj_singh"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/_3h_ago" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_more_menu" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:maxWidth="330dp"
            android:maxLines="7"
            android:minLines="1"
            android:text="@string/placeholder_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:fontFamily="@font/sourcesanspro_regular" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHashTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:maxWidth="330dp"
            android:maxLines="7"
            android:minLines="1"
            android:text="# writing #books #myfavouritegenre #category tag"
            android:textColor="@color/blue_teal"
            android:textSize="14sp"
            app:fontFamily="@font/sourcesanspro_regular" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPostedData"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:srcCompat="@drawable/ic_img_demo" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:weightSum="6"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_weight="1"
                android:focusable="true"
                app:srcCompat="@drawable/ic_filled_heart" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_weight="1"
                android:focusable="true"
                app:srcCompat="@drawable/ic_comment" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:layout_weight="1"
                android:focusable="true"
                app:srcCompat="@drawable/ic_save" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>